@@ -3812,6 +3812,28 @@ public class ResultSetImpl implements ResultSetInternalMethods {
 
 			}
 
+			if (this.connection.getNoDatetimeStringSync()) {
+				byte[] asBytes = getNativeBytes(columnIndex, true);
+				
+				if (asBytes == null) {
+					return null;
+				}
+				
+				if (asBytes.length == 0 /* newer versions of the server 
+					seem to do this when they see all-zero datetime data */) {
+					return "0000-00-00";
+				}
+				
+				int year = (asBytes[0] & 0xff)
+				| ((asBytes[1] & 0xff) << 8);
+				int month = asBytes[2];
+				int day = asBytes[3];
+				
+				if (year == 0 && month == 0 && day == 0) {
+					return "0000-00-00";
+				}
+			}
+			
 			Date dt = getNativeDate(columnIndex);
 
 			if (dt == null) {
@@ -3830,6 +3852,28 @@ public class ResultSetImpl implements ResultSetInternalMethods {
 			return String.valueOf(tm);
 
 		case Types.TIMESTAMP:
+			if (this.connection.getNoDatetimeStringSync()) {
+				byte[] asBytes = getNativeBytes(columnIndex, true);
+				
+				if (asBytes == null) {
+					return null;
+				}
+				
+				if (asBytes.length == 0 /* newer versions of the server 
+					seem to do this when they see all-zero datetime data */) {
+					return "0000-00-00 00:00:00";
+				}
+				
+				int year = (asBytes[0] & 0xff)
+				| ((asBytes[1] & 0xff) << 8);
+				int month = asBytes[2];
+				int day = asBytes[3];
+				
+				if (year == 0 && month == 0 && day == 0) {
+					return "0000-00-00 00:00:00";
+				}
+			}
+			
 			Timestamp tstamp = getNativeTimestamp(columnIndex,
 					null, this.defaultTimeZone, false);
 
@@ -4587,8 +4631,11 @@ public class ResultSetImpl implements ResultSetInternalMethods {
 
 		// TODO: Check Types Here.
 		stringVal = getNativeConvertToString(columnIndex, field);
-
-		if (field.isZeroFill() && (stringVal != null)) {
+		int mysqlType = field.getMysqlType();
+		
+		if (mysqlType != MysqlDefs.FIELD_TYPE_TIMESTAMP && 
+				mysqlType != MysqlDefs.FIELD_TYPE_DATE && 
+				field.isZeroFill() && (stringVal != null)) {
 			int origLength = stringVal.length();
 
 			StringBuffer zeroFillBuf = new StringBuffer(origLength);
